<resources>
    <string name="app_name">scoretransfer</string>
    <string name="enter_flat_number">номер квартиры</string>
    <string name="title_activity_counters">counters</string>
    <string name="inputflatnum">номер квартиры</string>
    <string name="nextbut">готово</string>
    <string name="gvs">ГВС</string>
    <string name="hvs">ХВС</string>
    <string name="electricity">Электричество</string>
    <string name="add">внести показания</string>
    <string name="addscories">отправить</string>
    <string name="FlatNum">Номер квартиры</string>
    <string name="initials">Фамилия Имя</string>
    <string name="settings">настройки</string>
    <string name="history">история показаний</string>
</resources>
