<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".counters">

    <Button
        android:id="@+id/sendbutton"
        android:layout_width="112dp"
        android:layout_height="54dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="152dp"
        android:onClick="onClickSend"
        android:text="@string/addscories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/gvs"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hvs"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/electricity"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/sendbutton"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>